# Fully_connected_neural_network

./: .gitignore  CMakeLists.txt  NetworkConfig.h.in  README.md
AndroidNetwork/: settings.gradle.kts
Data/: Add_10.txt  Add_100.txt  Add_1000.txt  Iris.txt  Load.txt  Load_2.txt  Table_XOR.txt  Test.txt
Output_data_(MSE)/: MLP [2-1-1] 2024_11_03_20_26_31.txt  MLP [2-6-5] 2024_07_14_19_54_29.txt  MLP [2-6-5] 2024_09_22_20_24_48.txt  MLP [2-6-5] 2024_09_22_20_25_02.txt  MLP [2-6-5] 2024_09_24_17_48_08.txt  MLP [2-6-5] 2024_10_08_18_14_36.txt  MLP [2-6-5] 2024_10_08_18_15_40.txt  MLP [2-6-5] 2024_11_03_20_18_25.txt  MLP [2-6-5] 2024_11_03_20_22_32.txt  MLP [2-6-5] 2024_11_03_20_24_41.txt  MLP [2-6-5] 2024_11_03_20_25_46.txt  MLP [2-6-5] 2024_11_03_20_25_50.txt  MLP [2-6-5] 2024_11_03_20_25_55.txt  MLP [4-5-3-6-8-3]  [10000 Epochs] 2024_11_10_01_06_33.txt  MLP [4-5-3-6-8-3]  [10000 Epochs] 2024_11_10_01_08_06.txt  MLP [4-5-3-6-8-3]  [10000 Epochs] 2024_11_10_01_08_34.txt  MLP [4-5-3-6-8-3]  [10000 Epochs] 2024_11_10_01_08_58.txt  hist.c
Output_data_MSE/: MLP_2-1-1__1000_Epochs_2026_01_18_13_37_29.txt  MLP_2-1-1__1000_Epochs_2026_01_18_13_40_51.txt  MLP_2-1-1__1000_Epochs_2026_01_18_14_04_46.txt  MLP_2-1-1__1000_Epochs_2026_01_18_14_11_06.txt  MLP_2-1-1__1_Epochs_2026_01_18_14_19_47.txt  MLP_2-1-1__1_Epochs_2026_01_18_14_20_19.txt  MLP_2-2-1-1__100_Epochs_2026_02_04_17_12_45.txt  MLP_2-2-1-1__100_Epochs_2026_02_04_17_57_27.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_06_21.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_11_59.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_26_21.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_27_05.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_37_19.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_38_09.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_43_00.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_43_26.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_44_08.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_45_07.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_45_37.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_50_17.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_52_47.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_53_23.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_18_56_49.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_19_00_37.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_19_01_29.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_19_03_21.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_19_08_46.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_19_12_58.txt  MLP_2-2-1-1__10_Epochs_09_02_2026_19_18_52.txt  MLP_2-2-1__1_Epochs_2026_01_18_15_11_15.txt  MLP_2-2-1__1_Epochs_2026_01_18_15_14_45.txt  MLP_2-2-1__1_Epochs_2026_01_18_15_17_45.txt  MLP_2-20-18-15-8-2-1__100_Epochs_2025_12_30_19_33_44.txt  MLP_2-20-18-15-8-2-1__10_Epochs_2025_12_30_19_33_02.txt  MLP_2-3-2__10000_Epochs_2024_11_11_23_22_14.txt  MLP_2-3-2__10000_Epochs_2024_11_11_23_29_48.txt  MLP_2-3-2__10000_Epochs_2024_11_11_23_44_58.txt  MLP_2-3-2__10000_Epochs_2024_11_11_23_54_26.txt  MLP_2-3-2__10000_Epochs_2024_11_24_20_42_47.txt  MLP_2-3-2__10000_Epochs_2025_08_07_17_32_03.txt  (+32 more)
Output_data_graph/: MLP_2-1-1__1000_Epochs_2026_01_18_13_37_29_Plot.c  MLP_2-1-1__1000_Epochs_2026_01_18_13_40_51_Plot.c  MLP_2-1-1__1000_Epochs_2026_01_18_14_04_46_Plot.c  MLP_2-1-1__1000_Epochs_2026_01_18_14_11_06_Plot.c  MLP_2-1-1__1_Epochs_2026_01_18_14_19_47_Plot.c  MLP_2-1-1__1_Epochs_2026_01_18_14_20_19_Plot.c  MLP_2-2-1-1__100_Epochs_2026_02_04_17_12_45_Plot.c  MLP_2-2-1-1__100_Epochs_2026_02_04_17_57_27_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_06_21_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_11_59_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_26_21_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_27_05_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_37_19_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_38_09_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_43_00_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_43_26_Plot.c  MLP_2-2-1-1__10_Epochs_09_02_2026_18_44_08_Plot.c  (+73 more)
QT_widgets_network/Network_visualization/: CMakeLists.txt
src/: main.cpp  (+1 more)
(+108 files in other folders)
